# db-fire

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  ssh.rs  state.rs
src-tauri/src/db/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/components/Connection/: ConnectionDialog.tsx
src/components/DataGrid/: DataGrid.tsx
src/components/Editor/: MonacoEditor.tsx  QueryTabPanel.tsx  SQLEditorPanel.tsx
src/components/Explorer/: DatabaseExplorer.tsx
src/components/Import/: ImportDialog.tsx
src/components/Layout/: AppLayout.tsx  MainPanel.tsx  Sidebar.tsx  StatusBar.tsx
src/components/Settings/: SettingsDialog.tsx
src/components/TableBrowser/: TableBrowser.tsx  TableTabPanel.tsx
src/hooks/: useUpdater.ts
src/lib/: export.ts  import.ts
src/stores/: activeConnectionStore.ts  connectionStore.ts  editorStore.ts  settingsStore.ts  workspaceStore.ts
src/types/: connection.ts
